# youtube-chat-rs

./: .gitignore  Cargo.toml  README.md  build.rs
src/: auth.rs  client.rs  input_task.rs  main.rs  stats_task.rs  ui.rs
src/app/: event.rs  mod.rs  state.rs  ui.rs
src/youtube/: api.rs  auth.rs  mod.rs  models.rs
